Fixed alignment issue for heading

--- a/src/components/organisms/featuresSection/featuresSection.css
+++ b/src/components/organisms/featuresSection/featuresSection.css
@@ -65,5 +65,6 @@
 
     .featuresSection__header {
         white-space: nowrap;
+        transform: translateY(-25px);
     }
 }
